--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Treinamento git</title>
+<title>Hello World!</title>
 </head>
 <body>
+
+<h1>Hello world!</h1>
+<p>This is the first file in my new Git Repo.</p>
 
 <h1>Quais os comandos para configurar usuário e email no git?</h1>
 <p>git config --global user.name "nome sobrenome"</p>
